--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
     <title>Mohammed Ali</title>
 </head>
 
@@ -54,7 +55,7 @@
                 <p class="text-white fs-1">I'm <span class="text" style="color:#F6C501;cursor: pointer;" id="text"
                         onmouseover="over()">glad to meet you.</span>
                 </p>
-                <a class="btn" href="#contact">Contact me</a>
+                <a class="btn" id="contact-btn" href="#contact">Contact me</a>
             </div>
         </article>
     </section>
@@ -205,7 +206,7 @@
     </section>
 
     <section class="bg text-light text-center" id="contact">
-        <div class="container" style="padding-bottom: 100px; flex-direction: column;">
+        <div class="container" style="flex-direction: column;">
             <h1>Contact</h1>
             <p>You can contact me through the following services.</p>
             <div class="contact-info">
