--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
         <div class="container">
             <div class="images">
                 <div class="image active" index="0">
-                    <img style="height: 350px;" src="img/1.jpeg" alt="">
+                    <img src="img/1.jpeg" alt="">
                 </div>
                 <div class="image" index="1">
-                    <img style="height: 350px;" src="img/2.jpeg" alt="">
+                    <img src="img/2.jpeg" alt="">
                 </div>
                 <div class="image" index="1">
-                    <img style="height: 350px;" src="img/3.jpeg" alt="">
+                    <img src="img/3.jpeg" alt="">
                 </div>
             </div>
         </div>
